# backdoor

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
agent-chat/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.setup.ts
agent-chat/__tests__/: page.test.tsx
agent-chat/app/: globals.css  layout.tsx  page.tsx
agent-chat/components/chat/: BrowsePanel.tsx  ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  MentionInput.tsx  MentionPicker.tsx  MessageList.tsx  README.md  SearchResults.tsx  StreamingIndicator.tsx  (+3 more)
agent-chat/hooks/: index.ts  useAutocomplete.ts  useBrowse.ts
agent-chat/lib/: session.ts
alembic/: README.md  env.py  script.py.mako
alembic/versions/: .gitkeep  20260124_1041_787bfece0c59_add_core_entities.py  20260124_1440_2e7d4ed5ee4f_add_game_data_models.py  20260124_2329_e238ef0d8583_add_sync_cache_table.py  20260124_2339_9dd00f102f7e_add_playerseasonstats_and_synclog_models.py  20260125_1200_add_team_season_external_id.py  20260128_0956_3e82c0f7c143_add_external_ids_to_season_model.py  20260129_1000_9caca686de8a_add_positions_column.py
docs/: README.md  architecture.md  frontend.md  internal-viewer.md
docs/api/: README.md  games.md  leagues.md  players.md  stats.md  sync.md  teams.md
docs/development/: database-workflow.md
docs/models/: README.md  aggregated-stats.md  game-stats.md  play-by-play.md
docs/services/: README.md  analytics-service.md
docs/sync/: adding-new-source.md  architecture.md  deduplication.md  field-mappings.md
docs/tickets/: README.md  mention-autocomplete.md  server-deployment.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  router.tsx
scripts/: capture_fixtures.py  db_manage.py  deploy.sh  install-services.sh  merge_duplicates.py  run_sync.py  server.sh  sync.sh  test_nba_api.py
scripts/systemd/: basketball-backend.service  basketball-frontend.service
src/: README.md  __init__.py  main.py
src/api/: README.md  __init__.py
src/core/: README.md  __init__.py  config.py  database.py
src/models/: README.md  __init__.py  base.py  game.py  league.py  play_by_play.py  player.py  stats.py  sync.py  sync_cache.py  team.py  types.py
src/schemas/: README.md  __init__.py  analytics.py  base.py  chat.py  enums.py  game.py  league.py  play_by_play.py  player.py  player_stats.py  search.py  stats.py  sync.py  team.py
src/services/: README.md  __init__.py  analytics.py  base.py  chat_service.py  chat_tools.py  game.py  league.py  play_by_play.py  player.py  player_stats.py  query_stats.py  search_service.py  search_tools.py  stats.py  stats_calculation.py  sync_coverage.py  sync_service.py  team.py
src/sync/: README.md  __init__.py  completeness.py  config.py  exceptions.py  manager.py  normalizers.py  pbp.py  raw_to_canonical.py  season.py  tracking.py  types.py
tests/: README.md  __init__.py  conftest.py  test_placeholder.py
tests/ai/: README.md  conftest.py  test_query_stats_ai.py
tests/integration/: __init__.py  test_migrations.py  test_sync_coverage_api.py
viewer/: README.md  app.py  db.py
viewer/components/: README.md  __init__.py  filters.py  navigation.py  stats.py  tables.py
viewer/pages/: 1_Leagues.py  2_Teams.py  3_Players.py  4_Games.py  5_Sync.py  README.md
(+297 files in other folders)
